# basil

./: Cargo.toml  readme.md
example-project/: WORKSPACE
example-project/java/: BUILD
example-project/java/src/: App.java  Greeter.java
src/: bazel.rs  config.rs  io.rs  json.rs  lib.rs  main.rs  server.rs  types.rs
src/.basil/: logs
src/server/: bsp_types.rs  context.rs  error.rs  notification_handler.rs  request_handler.rs  rpc.rs
src/server/notification_handler/: build_exit.rs
src/server/request_handler/: initialize_build.rs  workspace_build_targets.rs
